# Opportunistic-optimisation--code-

./: .gitignore  Makefile  README.md  README.org  TODOs.org  buffer_experiment.py  main.py  main2.py  pyproject.toml  requirements.txt  video_generator.py  warehouse_video.py
examples/: run_simulation.py
tests/: test_environment.py  test_robots.py  test_warehouse.py
warehouse_sim/: __init__.py  environment.py  main.py  order.py  picking_station.py  ploter.py  robot.py  warehouse.py
